# Engine2D

./: CMakeLists.txt  README.md  main.cpp
demos/: CMakeLists.txt
demos/demoscene/: CMakeLists.txt
demos/demoscene/game/include/: DemoController.hpp  Utils.hpp  VisualEffect.hpp
demos/demoscene/game/src/: Game.cpp  main.cpp
demos/fire_opengl/: CMakeLists.txt
demos/fire_opengl/assets/shaders/: background-better.frag  background.frag  base.frag  base.vert  fire.frag  fire.vert  heat.frag  heat.vert
demos/fire_opengl/game/include/: Constants.hpp  FireOpenGL.hpp  Game.hpp  SDLInitializer.hpp  Shader.hpp
demos/fire_opengl/game/src/: FireOpenGL.cpp  Shader.cpp  main.cpp
demos/pathfinding-showcase/: CMakeLists.txt
demos/rts-moving-groups-showcase/: CMakeLists.txt
demos/rts-moving-groups-showcase/game/src/: Game.cpp
demos/sandbox/: CMakeLists.txt  main.cpp
demos/sandbox/game/include/: Game.hpp
demos/sandbox/game/src/: Game.cpp  main.cpp
include/: Engine2D.hpp  IEngineAPI.hpp
include/collision/: Collider.hpp  ColliderType.hpp  CollisionMath.hpp  CollisionWorld.hpp  ICollisionListener.hpp
include/font/: FontManager.hpp
include/game/: IGame.hpp
include/game/pacman/: Entity.hpp  Game.hpp  Ghos.hpp  IChaseStrategy.hpp
include/grid/: Grid.hpp  GridMover.hpp  GridMoverUtils.hpp
include/math/: Vec2.hpp
include/pathfinding/: Pathfinder.hpp
include/pathfinding/concept/: Frontier.hpp  GridGraph.hpp  Heuristic.hpp
include/pathfinding/detail/: StaticVec.hpp
include/pathfinding/frontier/: AStarFrontier.hpp  BFSFrontier.hpp  DijkstraFrontier.hpp
include/pathfinding/heuristic/: Chebyshev.hpp  Euclidean.hpp  Manhattan.hpp  Octile.hpp  Zero.hpp
include/pathfinding/neighbour_provider/: CrossProvider.hpp  StarProvider.hpp
include/renderer/: Renderer.hpp
include/sdl_initializer/: SDLImageInitializer.hpp  SDLInitializer.hpp  SDLMixerInitializer.hpp  SDLTTFInitializer.hpp
include/texture/: AssetLocator.hpp  TextureManager.hpp
include/timer/: Timer.hpp
include/utils/: RectOperations.hpp  Types.hpp
src/: Engine2D.cpp
src/asset_locator/: AssetLocator.cpp
src/font/: FontManager.cpp
src/game/: IGame.cpp
src/game/pacman/: Entity.cpp  Game.cpp  IChaseStrategy.cpp
src/grid/: Grid.cpp  GridMovement.cpp  GridMover.cpp  GridMoverUtils.cpp
src/renderer/: Renderer.cpp
src/sdl_initializer/: SDLImageInitializer.cpp  SDLInitializer.cpp  SDLMixerInitializer.cpp  SDLTTFInitializer.cpp
src/texture/: AssetLocator.cpp  TextureManager.cpp
src/timer/: Timer.cpp
src/utils/: Types.cpp
